# github-jira-stats

./: .env.example  .gitignore  README.md  env.example  example_usage.py  pyproject.toml  sprint_analytics.py
