[project]
name = "jira-github-stats"
version = "1.0.0"
description = "GitHub PR Analytics Report Generator from Jira Sprint Data"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "PyGithub>=1.59.1",
    "atlassian-python-api>=3.41.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "tabulate>=0.9.0",
    "tqdm>=4.66.0",
    "gql>=3.4.1",
    "aiohttp>=3.9.0",
]

[project.scripts]
sprint-analytics = "sprint_analytics:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "sprint_analytics.py",
    "example_usage.py",
    "env.example"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
